src/tests/testfiles/binary-operators/types-15.txt
Error at 2:5: Binary operator operands must have the same type (have float rvalue and char rvalue)
5.0 - '5';
^
